--- a/template/home-todo.html
+++ b/template/home-todo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TODO LIST - Home</title>
+    <title>Task Manager - Home</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -94,7 +94,7 @@
             </button>
         </div>
 
-        <h1 class="pt-5 text-center display-4 fw-bold">ToDo App</h1>
+        <h1 class="pt-5 text-center display-4 fw-bold">Task Manager</h1>
         <div class="row mt-4">
             <div class="col-md-7">
                 <h4>My Day</h4>
