--- a/template/update.html
+++ b/template/update.html
@@ -76,7 +76,7 @@
             </button>
         </div>
 
-        <h1 class="pt-5 text-center display-4 fw-bold">Update ToDo</h1>
+        <h1 class="pt-5 text-center display-4 fw-bold">Update Task Manager </h1>
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <!-- Update ToDo Form -->
